Draw a triangle with colors.

--- a/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj
+++ b/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj
@@ -140,6 +140,12 @@
       <Define Condition="'$(Configuration)|$(Platform)'=='Release|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB</Define>
     </QtMoc>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="d3d_def.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders.shader" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
