--- a/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj.filters
+++ b/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj.filters
@@ -58,4 +58,14 @@
       <Filter>Resource Files</Filter>
     </QtRcc>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="d3d_def.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders.shader">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
