Add new class for rendering triangle.

--- a/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj.filters
+++ b/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="d3d_camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="d3d_triangle_engine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="d3d_practice_gui.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="d3d_camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="d3d_triangle_engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
