Implement draw texture onto triangle.

--- a/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj
+++ b/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <ClCompile Include="d3d_camera.cpp" />
     <ClCompile Include="d3d_practice_gui.cpp" />
+    <ClCompile Include="d3d_texture_engine.cpp" />
     <ClCompile Include="d3d_triangle_engine.cpp" />
     <ClCompile Include="display_window.cpp" />
     <ClCompile Include="main.cpp" />
@@ -145,10 +146,12 @@
   <ItemGroup>
     <ClInclude Include="d3d_camera.h" />
     <ClInclude Include="d3d_def.h" />
+    <ClInclude Include="d3d_texture_engine.h" />
     <ClInclude Include="d3d_triangle_engine.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders.shader" />
+    <None Include="texture.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
