Add interface for implement different D3D features.

--- a/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj.filters
+++ b/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClInclude Include="d3d_texture_engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ID3d_engine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders.shader">
