--- a/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj
+++ b/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="d3d_def.h" />
     <ClInclude Include="d3d_texture_engine.h" />
     <ClInclude Include="d3d_triangle_engine.h" />
+    <ClInclude Include="ID3d_engine.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders.shader" />
