--- a/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj.filters
+++ b/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="d3d_texture_engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="d3d_diffuselighting_engine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="d3d_practice_gui.h">
@@ -86,12 +89,18 @@
     <ClInclude Include="ID3d_engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="d3d_diffuselighting_engine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders.shader">
       <Filter>Shader</Filter>
     </None>
     <None Include="texture.shader">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="diffuselighting.shader">
       <Filter>Shader</Filter>
     </None>
   </ItemGroup>
