--- a/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj
+++ b/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="d3d_camera.cpp" />
     <ClCompile Include="d3d_diffuselighting_engine.cpp" />
     <ClCompile Include="d3d_practice_gui.cpp" />
+    <ClCompile Include="d3d_simple3dmodel_engine.cpp" />
     <ClCompile Include="d3d_texture_engine.cpp" />
     <ClCompile Include="d3d_triangle_engine.cpp" />
     <ClCompile Include="display_window.cpp" />
@@ -148,6 +149,7 @@
     <ClInclude Include="d3d_camera.h" />
     <ClInclude Include="d3d_def.h" />
     <ClInclude Include="d3d_diffuselighting_engine.h" />
+    <ClInclude Include="d3d_simple3dmodel_engine.h" />
     <ClInclude Include="d3d_texture_engine.h" />
     <ClInclude Include="d3d_triangle_engine.h" />
     <ClInclude Include="ID3d_engine.h" />
@@ -155,6 +157,7 @@
   <ItemGroup>
     <None Include="diffuselighting.shader" />
     <None Include="shaders.shader" />
+    <None Include="simple3dmodel.shader" />
     <None Include="texture.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
